--- a/app/src/main/res/layout/activity_chat_box.xml
+++ b/app/src/main/res/layout/activity_chat_box.xml
@@ -41,7 +41,7 @@
             android:layout_marginTop="4dp"
             android:textColorHint="@android:color/darker_gray"
             android:textColor="@android:color/black"
-            android:layout_toLeftOf="@+id/commentBtn"
+            android:layout_toLeftOf="@+id/sendMessage"
             android:background="@drawable/chatbox_edittext_design"
             android:fontFamily="@font/amarante"
             android:gravity="top|start"
@@ -49,7 +49,7 @@
             android:maxLength="2000" />
 
         <ImageButton
-            android:id="@+id/commentBtn"
+            android:id="@+id/sendMessage"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_marginEnd="5dp"
