--- a/app/src/main/res/layout/fragment_loader.xml
+++ b/app/src/main/res/layout/fragment_loader.xml
@@ -9,9 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:padding="50dp"
         app:lottie_autoPlay="true"
-        app:lottie_fileName="ramadan.json"
+        app:lottie_fileName="I_stay_at_home.json"
         app:lottie_loop="true" />
 
 </RelativeLayout>
