Name and Image set in comment box. Still has some problem.

--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -541,14 +541,16 @@
             android:layout_marginStart="20dp"
             android:visibility="gone">
 
+
             <TextView
                 android:id="@+id/commentTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:fontFamily="@font/amarante"
                 android:text="Total Comments :"
-                android:textSize="21sp"
-                android:textColor="@android:color/black" />
-
+                android:textColor="@android:color/black"
+                android:textSize="21sp" />
             <TextView
                 android:id="@+id/commentCount"
                 android:layout_width="wrap_content"
@@ -567,7 +569,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:fontFamily="@font/amarante"
-                android:text="View Comments"
+                android:text="View"
                 android:textColor="@color/colorBlue"
                 android:textSize="18sp" />
         </RelativeLayout>
