--- a/app/src/main/res/drawable/chat_background_right.xml
+++ b/app/src/main/res/drawable/chat_background_right.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners
-        android:radius="10dp"
-        android:topRightRadius="0dp" />
-    <solid android:color="@color/quantum_googgreen400" />
+    <corners android:radius="10dp" />
+    <solid android:color="#E1EAE8E8" />
 </shape>
