--- a/app/src/main/res/drawable/chatbox_edittext_design.xml
+++ b/app/src/main/res/drawable/chatbox_edittext_design.xml
@@ -2,11 +2,8 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke
-        android:width="1dp"
-        android:color="@color/colorBlue" />
 
-    <corners android:radius="5dp" />
-    <solid android:color="@android:color/white" />
+    <corners android:radius="25dp" />
+    <solid android:color="#E1EAE8E8" />
 
 </shape>
