--- a/app/src/main/res/layout/activity_chat_box.xml
+++ b/app/src/main/res/layout/activity_chat_box.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.ChatBox"
-    android:background="#e6e6e6">
+    android:background="@android:color/white">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
@@ -17,36 +17,39 @@
         android:id="@+id/commentRL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#e6e6e6"
+        android:background="@android:color/white"
+        android:layout_marginBottom="3dp"
         android:layout_alignParentBottom="true">
 
         <View
             android:id="@+id/view1"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/white" />
+            android:layout_height="2dp"
+            android:background="#E1EAE8E8" />
 
         <EditText
             android:id="@+id/commentET"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Send a message.."
+            android:layout_height="40dp"
+            android:hint="Write a comment..."
             android:layout_centerVertical="true"
+            android:paddingTop="10dp"
             android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:textSize="21sp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:paddingBottom="5dp"
+            android:paddingStart="15dp"
+            android:textSize="18sp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_below="@+id/view1"
-            android:layout_marginTop="4dp"
-            android:textColorHint="@android:color/darker_gray"
+            android:layout_marginTop="3dp"
+            android:textColorHint="@android:color/black"
             android:textColor="@android:color/black"
             android:layout_toLeftOf="@+id/sendMessage"
             android:background="@drawable/chatbox_edittext_design"
-            android:fontFamily="@font/amarante"
             android:gravity="top|start"
             android:inputType="textMultiLine|textCapSentences"
-            android:maxLength="2000" />
+            android:maxLength="2000"
+            android:maxLines="5" />
 
         <ImageButton
             android:id="@+id/sendMessage"
@@ -55,7 +58,7 @@
             android:layout_marginEnd="5dp"
             android:layout_alignParentEnd="true"
             android:layout_below="@+id/view1"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="5dp"
             android:background="@drawable/ic_send_blue" />
 
 
