--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -1,25 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
+    android:layout_width="350dp"
     android:layout_height="wrap_content"
     android:padding="5dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/chat_profileImage"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:id="@+id/chat_profileImage"
         android:src="@drawable/man" />
 
-    <TextView
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/chat_profileImage"
         android:layout_marginLeft="5dp"
+        android:layout_toEndOf="@+id/chat_profileImage"
         android:background="@drawable/chat_background_left"
-        android:text="hello"
-        android:id="@+id/showMessage"
-        android:padding="8dp"
-        android:textSize="18sp"
-        android:textColor="@android:color/white" />
+        android:padding="8dp">
 
+        <TextView
+            android:id="@+id/senderName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Imran Hossain"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/showMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/senderName"
+            android:text="hello"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+    </RelativeLayout>
 </RelativeLayout>
