comments database structure changed

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorYellow">#face2f</color>
     <color name="colorBlack">#000</color>
     <color name="colorBlue">#176bef</color>
+    <color name="blue1">#4d94ff</color>
     <color name="colorGreen">#179c52</color>
 
     <color name="color1">#424549</color>
