--- a/app/src/main/res/layout/activity_chat_box.xml
+++ b/app/src/main/res/layout/activity_chat_box.xml
@@ -17,9 +17,9 @@
         android:id="@+id/commentRL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:layout_marginBottom="3dp"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp"
+        android:background="@android:color/white">
 
         <View
             android:id="@+id/view1"
@@ -31,34 +31,34 @@
             android:id="@+id/commentET"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:hint="Write a comment..."
-            android:layout_centerVertical="true"
-            android:paddingTop="10dp"
-            android:paddingEnd="10dp"
-            android:paddingBottom="5dp"
-            android:paddingStart="15dp"
-            android:textSize="18sp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
             android:layout_below="@+id/view1"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="3dp"
-            android:textColorHint="@android:color/black"
-            android:textColor="@android:color/black"
+            android:layout_marginEnd="5dp"
             android:layout_toLeftOf="@+id/sendMessage"
             android:background="@drawable/chatbox_edittext_design"
             android:gravity="top|start"
+            android:hint="Write a comment..."
             android:inputType="textMultiLine|textCapSentences"
             android:maxLength="2000"
-            android:maxLines="5" />
+            android:maxLines="5"
+            android:paddingStart="15dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="5dp"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/black"
+            android:textSize="18sp" />
 
         <ImageButton
             android:id="@+id/sendMessage"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_marginEnd="5dp"
-            android:layout_alignParentEnd="true"
             android:layout_below="@+id/view1"
+            android:layout_alignParentEnd="true"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
             android:background="@drawable/ic_send_blue" />
 
 
