--- a/app/src/main/res/layout/activity_comments_box.xml
+++ b/app/src/main/res/layout/activity_comments_box.xml
@@ -18,14 +18,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
-        android:background="@android:color/white">
+        android:layout_marginBottom="5dp">
 
         <View
             android:id="@+id/view1"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#E1EAE8E8" />
+            android:layout_height="1dp" />
 
         <EditText
             android:id="@+id/commentET"
@@ -55,11 +53,11 @@
             android:id="@+id/sendMessage"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_below="@+id/view1"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="7dp"
             android:layout_marginEnd="5dp"
-            android:background="@drawable/ic_send_blue" />
+            android:src="@drawable/ic_send_blue"
+            android:background="@drawable/send_button_design" />
 
 
     </RelativeLayout>
