--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -44,5 +44,5 @@
         android:layout_below="@+id/crl"
         android:textColor="@color/color1"
         android:layout_marginStart="50dp"
-        android:visibility="visible" />
+        android:visibility="gone" />
 </RelativeLayout>
