--- a/app/src/main/res/layout/activity_comments_box.xml
+++ b/app/src/main/res/layout/activity_comments_box.xml
@@ -36,12 +36,15 @@
             android:layout_weight="4"
             android:background="@drawable/chatbox_edittext_design"
             android:hint="Write a comment..."
-            android:inputType="textMultiLine|textCapSentences"
-            android:maxLength="2000"
-            android:maxLines="5"
+            android:inputType="textMultiLine"
+            android:minLines="1"
+            android:maxLines="6"
+            android:scrollbars="vertical"
+            android:gravity="top|left"
             android:paddingStart="15dp"
             android:paddingTop="10dp"
             android:paddingEnd="15dp"
+            android:overScrollMode="always"
             android:paddingBottom="10dp"
             android:textColor="@android:color/black"
             android:textColorHint="@android:color/darker_gray"
@@ -54,6 +57,9 @@
             android:layout_gravity="bottom"
             android:layout_marginEnd="17dp"
             android:layout_weight="0"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
+            android:layout_marginBottom="3dp"
             android:background="@drawable/send_button_design"
             android:contentDescription="sendButton"
             android:src="@drawable/ic_send_blue" />
