--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -69,7 +69,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
+    <com.dd.processbutton.iml.ActionProcessButton
         android:id="@+id/continue_BTN"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -78,10 +78,19 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="20dp"
-        android:background="@drawable/custom_btn"
+        android:inputType="textCapWords"
         android:text="Continue"
         android:textAllCaps="false"
-        android:textColor="@color/colorYellow" />
+        android:textColor="@color/colorYellow"
+        app:pb_colorComplete="@color/colorPrimaryDark"
+        app:pb_colorError="@color/red_error"
+        app:pb_colorNormal="@color/colorPrimaryDark"
+        app:pb_colorPressed="@color/colorPrimaryDark"
+        app:pb_colorProgress="@color/purple_progress"
+        app:pb_cornerRadius="5dp"
+        app:pb_textComplete="Continue"
+        app:pb_textError="Error"
+        app:pb_textProgress="connecting" />
 
 
 </RelativeLayout>
