--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -61,8 +61,8 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="5dp"
             android:text="Swipe right to reply"
-            android:textColor="#000000"
-            tools:visibility="visible" />
+            android:textColor="@color/color1"
+            tools:visibility="gone" />
 
     </RelativeLayout>
 
