--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -53,6 +53,17 @@
             android:textColor="@color/color1"
             android:visibility="visible" />
 
+        <TextView
+            android:id="@+id/commentCounted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/commentTimeTV"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="5dp"
+            android:text="Swipe right to reply"
+            android:textColor="@color/color1"
+            tools:visibility="visible" />
+
     </RelativeLayout>
 
 
