--- a/app/src/main/res/layout/fragment_tour.xml
+++ b/app/src/main/res/layout/fragment_tour.xml
@@ -82,7 +82,7 @@
                     android:id="@+id/logoT"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/logo" />
+                    android:src="@drawable/logo2" />
 
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/loading"
